--- a/Netflix/style.css
+++ b/Netflix/style.css
@@ -37,7 +37,7 @@ section {
     display:flex;
     flex-direction: column;
     width: 450px;
-    height:735px;
+    height:709px;
     padding: 20px;
     border-radius: 5px;
     /* border: 5px solid black; */
@@ -68,13 +68,63 @@ footer {
 }
 
 #rodape {
-    background-color: black;
+    background-color: #161616;
     color: white;
-    height: 100px;
+    transform: translateY(-50px);
+    height: 300px;
     width: 100%;
     margin-top: -20px;
-
+    padding: 55px 340px;
     align-self: flex-end;
+}
+
+ul {
+
+    list-style-type: none;
+    columns: 5;
+    padding: 0;
+    
+
+}
+
+
+li {
+
+    margin-bottom: 20px;
+    margin-right: 20px;
+}
+
+li > a{
+
+    font-size: 15px;
+    color: #B9B9B9;
+
+}
+
+#invi {
+    visibility: hidden;
+}
+
+#rdpdiv{
+
+    margin-bottom: 15px;
+    color: #B9B9B9;
+
+}
+
+
+
+#idioma {
+
+    margin-bottom: 50px;
+    margin-top: 15px;
+    width: 146px;
+    height: 32px;
+    background-color: #161616;
+    color: white;
+    border-radius: 5px;
+    font-size: 17px;
+    text-align: center;
 }
 
 h1 {
