--- a/todolist/style.css
+++ b/todolist/style.css
@@ -9,7 +9,7 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
     height: 89vh;
-    width: 100%;
+    /* width: 100%; */
     background-image: linear-gradient(to bottom right, #0F2567, #4F1165 );
     text-align: center;
 }
@@ -31,8 +31,8 @@ header > h1{
 .main {
     background-image: linear-gradient(to bottom right,rgb(219, 219, 245), rgb(172, 190, 196));
     box-shadow: 5px 2px 2px #4F1165 ;
-    height: 550px;
-    width: 500px;
+    height: 61vh;
+    width: 55vh;
     margin: 135px auto;
     border-radius: 10px;
     display: flex;
@@ -45,10 +45,8 @@ header > h1{
 .list{
     background-color: rgb(238, 238, 238);
     border: 1px solid black;
-    height: 100px;
-    width: 100px;
     width: 90%;
-    height: 400px;
+    height: 80%;
     margin-top: 40px;
     border-radius: 10px;
     overflow-y: auto;
@@ -108,6 +106,10 @@ header > h1{
     padding: 5px;
 }
 
+#color{
+    display: none;
+}
+
 #button{ /*Button*/
     width: 60px;
     height: 50px;
@@ -120,5 +122,60 @@ header > h1{
 
 #button:hover{
     background-color: rgb(74, 74, 209);
+}
+
+@media(max-width: 500px){
+
+    body{
+        background-image: none;
+        
+    }
+
+    header{
+        display: none;
+    }
+
+    header > h1{
+        display: none;
+    }
+
+    .main{
+
+        width: 45vh;
+        height: 100vh;
+        margin: 0;
+        padding: 5px;
+        align-items: center;
+        justify-content: space-between;
+        
+    }
+
+    #btns{
+        order: 3;
+
+    }
+
+    .list{
+        margin: 0;
+        width: 42vh;
+        
+        order: 2;
+    }
+
+    #text{
+        width: 90vh;
+    }
+
+    #button{
+        width: 10vh;
+    }
+
+    #color{
+        display: block;
+        order: 1;
+        width: 5vh;
+        height: 5vh;
+        border-radius: 20px;
+    }
 }
 
