--- a/todolist/style.css
+++ b/todolist/style.css
@@ -4,13 +4,42 @@
     padding: 0;
 }
 
+:root{
+    --bg-color1: #0F2567;
+    --bg-color2: #4F1165;
+    --header-color: #ffffff;
+    --main-color1: #dbdbf5;
+    --main-color2: #acbec4;
+    --list-color: #eeeeee;
+    --button-color: #6868d1;
+    --inputText-Bg: #ffffff;
+    --item-color: #000000;
+    --excluir-color: #c539a7;
+
+    
+    
+}
+
+.darkMode{
+    --bg-color1: #ffffff;
+    --bg-color2: #ffffff;
+    --header-color: #ffffff;
+    --main-color1: #0F2567;
+    --main-color2: #4F1165;
+    --list-color: #000000;
+    --button-color: #5f5fec;
+    --inputText-Bg: #000000;
+    --item-color: #ffffff;
+    --excluir-color: #6100fd;
+}
+
 
 
 body{
     font-family: Arial, Helvetica, sans-serif;
     height: 89vh;
     /* width: 100%; */
-    background-image: linear-gradient(to bottom right, #0F2567, #4F1165 );
+    background-image: linear-gradient(to bottom right, var(--bg-color1), var(--bg-color2) );
     text-align: center;
 }
 
@@ -23,13 +52,13 @@ header > h1{
     margin-top: 100px;
     margin-bottom: -60px;
     font-size: 4em;
-    color: white;
+    color: var(--header-color);
     font-family: cursive;
 
 }
 
 .main {
-    background-image: linear-gradient(to bottom right,rgb(219, 219, 245), rgb(172, 190, 196));
+    background-image: linear-gradient(to bottom right,var(--main-color1), var(--main-color2));
     box-shadow: 5px 2px 2px #4F1165 ;
     height: 61vh;
     width: 55vh;
@@ -43,7 +72,7 @@ header > h1{
 }
 
 .list{
-    background-color: rgb(238, 238, 238);
+    background-color: var(--list-color);
     border: 1px solid black;
     width: 90%;
     height: 80%;
@@ -69,6 +98,7 @@ header > h1{
     font-size: 2em;
     transition: 0.5s;
     cursor: pointer;
+    color: var(--item-color);
 }
 
 .feito{
@@ -79,7 +109,7 @@ header > h1{
 .excluir{
     height: 2.5em;
     margin: 12px 10px;
-    background-color: #c539a7;
+    background-color: var(--excluir-color);
     border-radius: 10px;
     transition: 0.6s;
     
@@ -104,10 +134,15 @@ header > h1{
     border-radius: 20px;
     font-size: 1.5em;
     padding: 5px;
+    background-color: var(--inputText-Bg);
+    color: var(--item-color);
+    border: 2px solid black
 }
 
 #color{
     display: none;
+    background-color: var(--item-color);
+    box-shadow: 1px 5px 20px  var(--item-color);
 }
 
 #button{ /*Button*/
@@ -116,7 +151,7 @@ header > h1{
     border-radius: 20px;
     font-size: 2em;
     margin-left: -40px;
-    background-color: rgb(104, 104, 209);
+    background-color: var(--button-color);
     transition: 0.6s;
 }
 
@@ -147,6 +182,7 @@ header > h1{
         padding: 5px;
         align-items: center;
         justify-content: space-between;
+        border-radius: 0;
         
     }
 
@@ -164,6 +200,7 @@ header > h1{
 
     #text{
         width: 90vh;
+        
     }
 
     #button{
