--- a/YoutubeVideo/style.css
+++ b/YoutubeVideo/style.css
@@ -1,3 +1,41 @@
+*{
+    padding: 0px;
+    margin: 0px;
+    box-sizing: border-box;
+}
+
 body{
     background-color: #0F0F0F;
+}
+
+header{
+    background-color: rgb(0, 26, 255);
+    width: 100%;
+    padding: 15px;
+
+}
+
+header ul{
+    list-style: none;
+    display: flex;
+    gap: 500px;
+    
+}
+
+header ul li ul{
+    display: flex;
+    gap: 20px;
+}
+
+
+#pesqui{
+    width: 500px;
+    height: 42px;
+    border-radius: 20px 0px 0px 20px;
+    padding: 10px;
+}
+
+
+#ytbLogo{
+    width: 100px;
 }
