--- a/YoutubeVideo/style.css
+++ b/YoutubeVideo/style.css
@@ -11,20 +11,30 @@ body{
 header{
     background-color: rgb(0, 26, 255);
     width: 100%;
-    padding: 15px;
-
-}
-
-header ul{
-    list-style: none;
+    max-height: 72px    ;
     display: flex;
-    gap: 500px;
-    
+    justify-content: space-between;
+
 }
 
-header ul li ul{
+.left-container{
     display: flex;
     gap: 20px;
+    margin: 15px 20px;
+    border: 1px solid black;
+
+}
+
+.center-container{
+    display: flex;
+    margin: 8px;
+    border: 1px solid black;
+}
+
+.right-container{
+    display: flex;        
+    border: 1px solid black;
+
 }
 
 
@@ -35,7 +45,25 @@ header ul li ul{
     padding: 10px;
 }
 
+.search-container{
+    display: flex;
+}
+
+#search-btn{
+    background-color: #222222;
+    width: 50px;
+}
+
 
 #ytbLogo{
     width: 100px;
+}
+
+.user-pfp{
+    background: url(Files/YouTube_2024_\(white_text\).svg.png) left top no-repeat;
+    background-size: cover;
+
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
 }
