--- a/YoutubeVideo/style.css
+++ b/YoutubeVideo/style.css
@@ -9,40 +9,60 @@ body{
 }
 
 header{
-    background-color: rgb(0, 26, 255);
+    background-color: #0F0F0F;
     width: 100%;
-    max-height: 72px    ;
+    height: 56px;
+    max-height: 56px    ;
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    padding: 0px 16px 0px 16px;
 
 }
 
 .left-container{
     display: flex;
     gap: 20px;
-    margin: 15px 20px;
-    border: 1px solid black;
 
 }
 
 .center-container{
     display: flex;
-    margin: 8px;
-    border: 1px solid black;
+    gap: 15px;
 }
 
 .right-container{
     display: flex;        
-    border: 1px solid black;
+    height: max-content;
+    gap: 20px;
+    align-items: center;
+
 
 }
 
 
+
+#noti-btn{
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
 #pesqui{
-    width: 500px;
-    height: 42px;
+    width: 533px;
+    height: 40px;
     border-radius: 20px 0px 0px 20px;
+    font-size: 1em;
     padding: 10px;
+    background-color: #121212;
+    border: 0.1px solid #222222;
+    outline: none;
+}
+
+#pesqui:focus{
+    border-color: #1C62B9;
 }
 
 .search-container{
@@ -51,7 +71,25 @@ header{
 
 #search-btn{
     background-color: #222222;
-    width: 50px;
+    width: 64px;
+    height: 40px;
+    border-radius: 0px 20px 20px 0px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+}
+
+
+
+#mic-btn{
+    background-color: #222222;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 
@@ -63,7 +101,7 @@ header{
     background: url(Files/YouTube_2024_\(white_text\).svg.png) left top no-repeat;
     background-size: cover;
 
-    width: 50px;
-    height: 50px;
+    width: 35px;
+    height: 35px;
     border-radius: 50%;
 }
