--- a/YoutubeVideo/style.css
+++ b/YoutubeVideo/style.css
@@ -1,11 +1,24 @@
+@import url('https://fonts.googleapis.com/css2?family=Coiny&family=Luckiest+Guy&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+
 *{
     padding: 0px;
     margin: 0px;
     box-sizing: border-box;
+    overflow: auto;
 }
 
 body{
+    font-family: 'Roboto', sans-serif;
     background-color: #0F0F0F;
+    display: grid;
+    grid-template-columns: 74% 26% ;
+    grid-template-rows: 56px max-content;
+    grid-template-areas: 
+        'header header'
+        'main section'
+
+    ;
+    
 }
 
 header{
@@ -17,7 +30,23 @@ header{
     justify-content: space-between;
     align-items: center;
     padding: 0px 16px 0px 16px;
+    grid-area: header;
 
+}
+
+main{
+    background-color: #0F0F0F;
+    grid-area: main;
+    border: 1px solid black;
+    display: flex;
+    flex-direction: column;
+    padding: 20px 10px 0px 85px;
+}
+
+section{
+    background-color: #0F0F0F;
+    grid-area: section;
+    border: 1px solid white;
 }
 
 .left-container{
@@ -104,4 +133,30 @@ header{
     width: 35px;
     height: 35px;
     border-radius: 50%;
+}
+
+.video-box{
+    height: 790px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    color: white;
+
+}
+
+.video-box div{
+    height: 95%;
+    background-color: purple;
+    border-radius: 10px;
+}
+
+.video-btns{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.right-btn-container{
+    display: flex;
+    gap: 10px;
 }
