--- a/todolist/style.css
+++ b/todolist/style.css
@@ -112,6 +112,8 @@ header > h1{
     background-color: var(--excluir-color);
     border-radius: 10px;
     transition: 0.6s;
+    max-width: 50px;
+    
     
 }
 .excluir:hover{
